--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "ecommerce",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "engines": {
+    "node": "10.16.2"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
